syntax = "proto3";

package demo.v1;

import "google/api/annotations.proto";
import "natsmicro/options.proto";

option go_package = "example/gen/demo/v1";

// JSONService demonstrates using JSON encoding for human-readable messages
// This is useful for debugging, logging, or when interoperating with systems
// that expect JSON (at the cost of larger message sizes and slower performance)
service JSONService {
  option (natsmicro.service) = {
    subject_prefix: "demo.json"
    name: "json_service"
    version: "1.0.0"
    description: "Demo service using JSON encoding"
    json: true  // Enable JSON encoding
    metadata: {
      key: "encoding"
      value: "json"
    }
  };
  
  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/v1/json/echo"
      body: "*"
    };
  }
  
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/json/users/{id}"
    };
  }
}

// BinaryService demonstrates using binary protobuf encoding (default)
// This is the standard, most efficient encoding for protobuf messages
// Provides smaller message sizes and better performance
service BinaryService {
  option (natsmicro.service) = {
    subject_prefix: "demo.binary"
    name: "binary_service"
    version: "1.0.0"
    description: "Demo service using binary protobuf encoding"
    json: false  // Use binary encoding (this is the default)
    metadata: {
      key: "encoding"
      value: "binary"
    }
  };
  
  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/v1/binary/echo"
      body: "*"
    };
  }
  
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/binary/users/{id}"
    };
  }
}

// Shared messages used by both services
message EchoRequest {
  string message = 1;
  int64 timestamp = 2;
}

message EchoResponse {
  string message = 1;
  int64 timestamp = 2;
  string encoding = 3; // "json" or "binary"
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  repeated string roles = 4;
  map<string, string> metadata = 5;
}
